--- a/styles/index.css
+++ b/styles/index.css
@@ -12,7 +12,13 @@ h1 {
     font-size: 54px;
     color: #3C1C0B;
     line-height: 51px;
+}
 
+h2 {
+    font-family: "Merriweather", serif;
+    font-weight: 900;
+    font-style: normal;
+    font-size: 30px;
 }
 
 p a {
@@ -26,10 +32,28 @@ a {
 .btn {
     padding: 9px 21px;
     border-radius: 6px;
+}
+
+.brown-btn {
+    background-color: #A2552E;
+    color: #FFFFFF;
     box-shadow: 6px 6px 15px -6px #7c7c7c;
 }
 
-.contact-btn {
+.white-btn {
+    background-color: #FFFFFF;
+    color: #3C1C0B;
+    border: 1px solid #A2552E;
+}
+
+.brown-btn:hover {
+    background-color: #FFFFFF;
+    color: #3C1C0B;
+    border: 1px solid #A2552E;
+    box-shadow: 6px 6px 15px -6px #7c7c7c;
+}
+
+.white-btn:hover {
     background-color: #A2552E;
     color: #FFFFFF;
 }
@@ -80,4 +104,33 @@ a {
 
 .social ul a {
     color: #000000;
+}
+
+.container {
+    width: 100%;
+}
+
+.shop {
+    width: 84%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 120px 0;
+    border-bottom: 1px solid #7c7c7c;
+}
+
+.right, .left {
+    width: 47%;
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
+    align-items: self-start;
+}
+
+.right img {
+    border-radius: 2%;
+    object-fit: fill;
+    width: 100%;
+    height: 100%;
 }
