--- a/styles/index.css
+++ b/styles/index.css
@@ -123,7 +123,7 @@ a {
 .right, .left {
     width: 47%;
     display: flex;
-    gap: 15px;
+    gap: 27px;
     flex-direction: column;
     align-items: self-start;
 }
@@ -133,4 +133,18 @@ a {
     object-fit: fill;
     width: 100%;
     height: 100%;
+}
+
+
+
+footer {
+    background-color: #DBCAAA;
+}
+
+.footer {
+    display: flex;
+}
+
+.footer img {
+    width: 6%;
 }
