working on footer

--- a/styles/index.css
+++ b/styles/index.css
@@ -139,12 +139,32 @@ a {
 
 footer {
     background-color: #DBCAAA;
+    
 }
 
 .footer {
     display: flex;
+    gap: 12px;
+    align-items: center;
+    justify-content: center;
+    padding: 54px 0;
 }
 
+.footer li {
+    list-style: none;
+}
+
+.footer a {
+    color: #3C1C0B;
+    font-size: 15px;
+}
+
+.footer a:hover {
+    color: #000000;
+    text-decoration: underline;
+}
+
+
 .footer img {
-    width: 6%;
+    width: 12%;
 }
