--- a/styles/index.css
+++ b/styles/index.css
@@ -19,6 +19,7 @@ h2 {
     font-weight: 900;
     font-style: normal;
     font-size: 30px;
+    color: #3C1C0B;
 }
 
 p a {
@@ -104,6 +105,7 @@ a {
 
 .social ul a {
     color: #000000;
+    font-size: 15px;
 }
 
 .container {
@@ -142,8 +144,46 @@ a {
 
 .touch .container {
     background-color: #E9E2DD;
-    width: 60%;
+    width: 72%;
     margin: 150px auto;
+    padding: 72px;
+    border-radius: 12px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.touch .address {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+    align-items: flex-start;
+}
+
+form {
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    gap: 21px;
+    align-items: self-start;
+}
+
+form div {
+    width: 100%;
+}
+input, textarea {
+    width: 100%;
+    height: 39px;
+    border-radius: 6px;
+    font-size: 18px;
+    padding: 6px 9px;
+    background-color: #F5F5F4;
+    border: #A2552E 1px solid;
+    outline: none;
+}
+
+textarea {
+    height: 150px;
 }
 
 footer {
