--- a/styles/index.css
+++ b/styles/index.css
@@ -137,6 +137,25 @@ a {
     height: 100%;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    top: 5%;
+    left: 5%;
+    z-index: 1;
+    width: 90%;
+    height: 90vh;
+    background-color: #3C1C0B;
+    border-radius: 6px;
+    box-shadow: 6px 6px 15px 0px #7c7c7c;
+}
+
+span {
+    float: right;
+    padding: 12px 15px;
+    color: #7c7c7c;
+}
+
 .gallery {
     background-color: #3C1C0B;
     height: 600px;
@@ -171,6 +190,7 @@ form {
 form div {
     width: 100%;
 }
+
 input, textarea {
     width: 100%;
     height: 39px;
