--- a/styles/index.css
+++ b/styles/index.css
@@ -30,10 +30,6 @@ h3 {
     color: #000000;
 }
 
-p a {
-    font-family: "Open Sans", sans-serif;
-}
-
 a {
     text-decoration: none;
 }
@@ -67,18 +63,19 @@ a {
     color: #FFFFFF;
 }
 
-.landing {
+/* HERO */
+.hero-section {
     height: 106vh;
     width: 100%;
 }
 
-.landing-img {
+.hero-image {
     width: 100%;
     height: 100%;
     object-fit: fill;
 }
 
-.landing-content {
+.hero-content {
     position: absolute;
     top: 12px;
     width: 99%;
@@ -95,7 +92,7 @@ a {
     width: 192px;
 }
 
-.ad {
+.headline {
     padding: 66px 0 ;
     width: 45%;
     display: flex;
@@ -104,14 +101,14 @@ a {
     align-items:flex-start;
 }
 
-.social ul {
+.contact-info ul {
     display: flex;
     flex-direction: column;
     gap: 12px;
     color: #3C1C0B;
 }
 
-.social ul a {
+.contact-info ul a {
     color: #000000;
     font-size: 15px;
 }
