--- a/styles/mobile_view_styles.css
+++ b/styles/mobile_view_styles.css
@@ -1,4 +1,4 @@
-@media (max-width:767px) {    
+@media (max-width:1024px) {    
     h1 {
         font-weight: 900;
         font-style: normal;
@@ -10,14 +10,14 @@
     h2 {
         font-weight: 900;
         font-style: normal;
-        font-size: 30px;
+        font-size: 27px;
         color: #3C1C0B;
     }
     
     h3 {
         font-weight: 900;
         font-style: normal;
-        font-size: 27px;
+        font-size: 24px;
         color: #000000;
     }
 
@@ -37,7 +37,8 @@
         color: #FFFFFF;
     }
     
-/* HERO */    
+/*/////////////////////////////////////////////////////////*/
+/* HERO */
     .hero-image {
         width: 100%;
         height: 100%;
@@ -84,4 +85,123 @@
         color: #000000;
         font-size: 15px;
     }
+
+/*/////////////////////////////////////////////////////////*/
+/* PRODUCTS SECTION */
+    .products-section {
+        width: 100%;
+    }
+
+    .products {
+        width: 96%;
+        margin: auto;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-between;
+        align-items: center;
+        gap: 54px;
+        padding: 120px 0;
+        border-bottom: 1px solid #7c7c7c;
+    }
+
+    .product-image, .product-description {
+        width: 100%;
+        display: flex;
+        gap: 15px;
+        flex-direction: column;
+        align-items: self-start;
+    }
+
+    .product-image img {
+        border-radius: 2%;
+        object-fit: fill;
+        width: 100%;
+        height: 100%;
+    }
+
+    .modal {
+        display: none;
+        position: fixed;
+        top: 1%;
+        left: 1%;
+        z-index: 1;
+        width: 96%;
+        height: 96vh;
+        background-color: #3C1C0B;
+        border-radius: 6px;
+        box-shadow: 6px 6px 15px 0px #7c7c7c;
+    }
+
+    .modal-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 93%;
+        margin: 1% auto;
+        border-bottom: #000000 solid 1px;
+        padding: 2% 0 1.5% 0;
+    }
+
+    .modal-images {
+        display: flex;
+        flex-direction: row;
+        gap: 9px;
+        padding: 1.5% 6%;
+    }
+
+    .modal-images div {
+        width: 100%;
+        height: 150px;
+        border: #000000 1px solid;
+    }
+
+/*/////////////////////////////////////////////////////////*/
+/* GALLERY */
+
+/*/////////////////////////////////////////////////////////*/
+/* GET IN TOUCH */
+.contact-section .container {
+    background-color: #E9E2DD;
+    width: 100%;
+    margin: 0;
+    padding: 222px;
+    border-radius: 0;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.contact-section .address-container {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+    align-items: flex-start;
+}
+
+form {
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    gap: 21px;
+    align-items: self-start;
+}
+
+form div {
+    width: 100%;
+}
+
+input, textarea {
+    width: 100%;
+    height: 39px;
+    border-radius: 6px;
+    font-size: 18px;
+    padding: 6px 9px;
+    background-color: #F5F5F4;
+    border: #A2552E 1px solid;
+    outline: none;
+}
+
+textarea {
+    height: 150px;
+}
 }
