landing page and hero image done, pending test across devices

--- a/styles/mobile_view_styles.css
+++ b/styles/mobile_view_styles.css
@@ -43,11 +43,15 @@
     
 /*/////////////////////////////////////////////////////////*/
 /* HERO */
+    .hero-section {
+        width: 100%;
+        height: 105vh;
+    }
+
     .hero-image {
         width: 100%;
         height: 100%;
         object-fit: cover;
-        display: none;
     }
     
     .hero-content {
