landing page and hero image done, pending test across devices

--- a/styles/mobile_view_styles.css
+++ b/styles/mobile_view_styles.css
@@ -18,7 +18,7 @@
         font-weight: 900;
         font-style: normal;
         font-size: 24px;
-        color: #000000;
+        color: #fff4ee;
     }
 
     p, a {
