--- a/styles/mobile_view_styles.css
+++ b/styles/mobile_view_styles.css
@@ -45,7 +45,7 @@
 /* HERO */
     .hero-section {
         width: 100%;
-        height: 105vh;
+        height: 720px;
     }
 
     .hero-image {
@@ -74,7 +74,7 @@
     }
     
     .headline {
-        padding: 15% 0 ;
+        padding: 21% 0 15% 0;
         width: 45%;
         display: flex;
         flex-direction: column;
@@ -252,9 +252,3 @@
     }
 }
 
-@media (max-height: 480px) {
-    .hero-section {
-        height: 250%;
-        width: 100%;
-    }
-}
