--- a/styles/mobile_view_styles.css
+++ b/styles/mobile_view_styles.css
@@ -1,4 +1,4 @@
-@media (max-width:1024px) {    
+@media (max-width:600px) {    
     h1 {
         font-weight: 900;
         font-style: normal;
@@ -45,7 +45,7 @@
 /* HERO */
     .hero-section {
         width: 100%;
-        height: 720px;
+        height: 630px;
     }
 
     .hero-image {
@@ -57,6 +57,7 @@
     .hero-content {
         position: absolute;
         top: 0;
+        height: 630px;
         width: 100%;
         margin: auto;
         padding: 0 3%;
@@ -74,7 +75,7 @@
     }
     
     .headline {
-        padding: 21% 0 15% 0;
+        padding: 18% 0 12% 0;
         width: 45%;
         display: flex;
         flex-direction: column;
@@ -127,8 +128,10 @@
         height: 100%;
     }
 
+    /*/////////////////////////////////////////////////////////*/
+    /* MODAL */
     .modal {
-        display: none;
+        display: block;
         position: fixed;
         top: 1%;
         left: 1%;
@@ -138,6 +141,7 @@
         background-color: #3C1C0B;
         border-radius: 6px;
         box-shadow: 6px 6px 15px 0px #7c7c7c;
+        overflow: hidden;
     }
 
     .modal-header {
@@ -150,17 +154,24 @@
         padding: 2% 0 1.5% 0;
     }
 
+    /* MODAL (PRODUCTS) */
     .modal-images {
         display: flex;
-        flex-direction: row;
-        gap: 9px;
-        padding: 1.5% 6%;
+        flex-direction: column;
+        gap: 21px;
+        padding: 1% 3%;
     }
 
     .modal-images div {
         width: 100%;
-        height: 150px;
+        height: 83vh;
         border: #000000 1px solid;
+    }
+
+    .modal-images img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
 /*/////////////////////////////////////////////////////////*/
