--- a/styles/index.css
+++ b/styles/index.css
@@ -63,216 +63,217 @@ a {
     color: #FFFFFF;
 }
 
-/*/////////////////////////////////////////////////////////*/
-/* HERO */
-.hero-section {
-    height: 106vh;
-    width: 100%;
-}
+@media (min-width:769px) {    
+    /*/////////////////////////////////////////////////////////*/
+    /* HERO */
+    .hero-section {
+        height: 106vh;
+        width: 100%;
+    }
 
-.hero-image {
-    width: 100%;
-    height: 100%;
-    object-fit: fill;
-}
+    .hero-image {
+        width: 100%;
+        height: 100%;
+        object-fit: fill;
+    }
 
-.hero-content {
-    position: absolute;
-    top: 12px;
-    width: 99%;
-    padding: 0 108px;
-}
+    .hero-content {
+        position: absolute;
+        top: 12px;
+        width: 99%;
+        padding: 0 108px;
+    }
 
-.logo {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+    .logo {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-.logo img {
-    width: 192px;
-}
+    .logo img {
+        width: 192px;
+    }
 
-.headline {
-    padding: 66px 0 ;
-    width: 45%;
-    display: flex;
-    flex-direction: column;
-    gap: 21px;
-    align-items:flex-start;
-}
+    .headline {
+        padding: 66px 0 ;
+        width: 45%;
+        display: flex;
+        flex-direction: column;
+        gap: 21px;
+        align-items:flex-start;
+    }
 
-.contact-info ul {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    color: #3C1C0B;
-}
+    .contact-info ul {
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+        color: #3C1C0B;
+    }
 
-.contact-info ul a {
-    color: #000000;
-    font-size: 15px;
-}
+    .contact-info ul a {
+        color: #000000;
+        font-size: 15px;
+    }
 
-/*/////////////////////////////////////////////////////////*/
-/* PRODUCTS SECTION */
-.products-section {
-    width: 100%;
-}
+    /*/////////////////////////////////////////////////////////*/
+    /* PRODUCTS SECTION */
+    .products-section {
+        width: 100%;
+    }
 
-.products {
-    width: 84%;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 120px 0;
-    border-bottom: 1px solid #7c7c7c;
-}
+    .products {
+        width: 84%;
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 120px 0;
+        border-bottom: 1px solid #7c7c7c;
+    }
 
-.product-image, .product-description {
-    width: 47%;
-    display: flex;
-    gap: 27px;
-    flex-direction: column;
-    align-items: self-start;
-}
+    .product-image, .product-description {
+        width: 47%;
+        display: flex;
+        gap: 27px;
+        flex-direction: column;
+        align-items: self-start;
+    }
 
-.product-image img {
-    border-radius: 2%;
-    object-fit: fill;
-    width: 100%;
-    height: 100%;
-}
+    .product-image img {
+        border-radius: 2%;
+        object-fit: fill;
+        width: 100%;
+        height: 100%;
+    }
 
-/*/////////////////////////////////////////////////////////*/
-/* MODAL */
-.modal {
-    display: block;
-    position: fixed;
-    top: 5%;
-    left: 5%;
-    z-index: 1;
-    width: 90%;
-    height: 90vh;
-    background-color: #3C1C0B;
-    border-radius: 6px;
-    box-shadow: 6px 6px 15px 0px #7c7c7c;
-}
+    /*/////////////////////////////////////////////////////////*/
+    /* MODAL */
+    .modal {
+        display: none;
+        position: fixed;
+        top: 5%;
+        left: 12%;
+        z-index: 1;
+        width: 75%;
+        height: 90vh;
+        background-color: #3C1C0B;
+        border-radius: 6px;
+        box-shadow: 6px 6px 15px 0px #7c7c7c;
+    }
 
-.modal-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 90%;
-    margin: 1.5% auto;
-    border-bottom: #000000 solid 1px;
-    padding: 0 0 1.5% 0;
-}
+    .modal-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 90%;
+        margin: 1.5% auto;
+        border-bottom: #000000 solid 1px;
+        padding: 0 0 1.5% 0;
+    }
 
-/* MODAL (PRODUCTS) */
-.modal-images {
-    display: flex;
-    flex-direction: row;
-    gap: 9px;
-    padding: 1.5% 6%;
-}
+    /* MODAL (PRODUCTS) */
+    .modal-images {
+        width: 75%;
+        margin: 0 auto;
+        height: 72vh;
+    }
 
-.modal-images div {
-    width: 50%;
-    height: 420px;
-    border: #000000 1px solid;
-}
+    .fade {
+        width: 100%;
+        height: 100%;
+        display: none;
+    }
 
-.modal-images img {
-    object-fit: fill;
-    width: 100%;
-    height: 100%;
-}
+    .fade img {
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+    }
 
-/*/////////////////////////////////////////////////////////*/
-/* GALLERY */
-.gallery {
-    background-color: #3C1C0B;
-    height: 600px;
-}
+    /*/////////////////////////////////////////////////////////*/
+    /* GALLERY */
+    .gallery {
+        background-color: #3C1C0B;
+        height: 600px;
+    }
 
-/*/////////////////////////////////////////////////////////*/
-/* GET IN TOUCH */
-.get-in-touch {
-    background-color: #E9E2DD;
-    width: 72%;
-    margin: 150px auto;
-    padding: 72px;
-    border-radius: 12px;
-    display: flex;
-    justify-content: space-around;
-}
+    /*/////////////////////////////////////////////////////////*/
+    /* GET IN TOUCH */
+    .get-in-touch {
+        background-color: #E9E2DD;
+        width: 72%;
+        margin: 150px auto;
+        padding: 72px;
+        border-radius: 12px;
+        display: flex;
+        justify-content: space-around;
+    }
 
-.get-in-touch-info {
-    display: flex;
-    flex-direction: column;
-    gap: 72px;
-}
+    .get-in-touch-info {
+        display: flex;
+        flex-direction: column;
+        gap: 72px;
+    }
 
-form {
-    width: 45%;
-    display: flex;
-    flex-direction: column;
-    gap: 21px;
-    align-items: self-start;
-}
+    form {
+        width: 45%;
+        display: flex;
+        flex-direction: column;
+        gap: 21px;
+        align-items: self-start;
+    }
 
-form div {
-    width: 100%;
-}
+    form div {
+        width: 100%;
+    }
 
-input, textarea {
-    width: 100%;
-    height: 39px;
-    border-radius: 6px;
-    font-size: 18px;
-    padding: 6px 9px;
-    background-color: #F5F5F4;
-    border: #A2552E 1px solid;
-    outline: none;
-}
+    input, textarea {
+        width: 100%;
+        height: 39px;
+        border-radius: 6px;
+        font-size: 18px;
+        padding: 6px 9px;
+        background-color: #F5F5F4;
+        border: #A2552E 1px solid;
+        outline: none;
+    }
 
-textarea {
-    height: 150px;
-}
+    textarea {
+        height: 150px;
+    }
 
-/*/////////////////////////////////////////////////////////*/
-/* FOOTER */
-footer {
-    background-color: #DBCAAA;
-    
-}
+    /*/////////////////////////////////////////////////////////*/
+    /* FOOTER */
+    footer {
+        background-color: #DBCAAA;
+        
+    }
 
-.footer {
-    display: flex;
-    gap: 12px;
-    align-items: center;
-    justify-content: center;
-    padding: 54px 0;
-}
+    .footer {
+        display: flex;
+        gap: 12px;
+        align-items: center;
+        justify-content: center;
+        padding: 54px 0;
+    }
 
-.footer li {
-    list-style: none;
-    text-align: center;
-}
+    .footer li {
+        list-style: none;
+        text-align: center;
+    }
 
-.footer a {
-    color: #3C1C0B;
-    font-size: 15px;
-}
+    .footer a {
+        color: #3C1C0B;
+        font-size: 15px;
+    }
 
-.footer a:hover {
-    color: #000000;
-    text-decoration: underline;
-}
+    .footer a:hover {
+        color: #000000;
+        text-decoration: underline;
+    }
 
 
-.footer img {
-    width: 12%;
+    .footer img {
+        width: 12%;
+    }
 }
