--- a/styles/mobile_view_styles.css
+++ b/styles/mobile_view_styles.css
@@ -133,18 +133,18 @@
     .modal {
         display: none;
         position: fixed;
-        top: 1%;
-        left: 1%;
+        top: 0;
+        left: 0;
         z-index: 1;
-        width: 96%;
-        height: 96vh;
+        width: 100%;
+        height: 100vh;
         background-color: #3C1C0B;
-        border-radius: 6px;
         box-shadow: 6px 6px 15px 0px #7c7c7c;
         overflow: hidden;
     }
 
     .modal-header {
+        opacity: 1;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -172,7 +172,7 @@
     .fade img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
         border-radius: 6px;
     }
 
