--- a/styles/index.css
+++ b/styles/index.css
@@ -30,8 +30,22 @@ h3 {
     color: #FFFFFF;
 }
 
+h4 {
+    font-family: "Merriweather", serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 21px;
+    color: #525252;
+    padding-bottom: 6px;
+}
+
 a {
     text-decoration: none;
+    color: #000000;
+}
+
+li {
+    list-style: none;
 }
 
 .btn {
@@ -54,13 +68,13 @@ a {
 .brown-btn:hover {
     background-color: #FFFFFF;
     color: #3C1C0B;
-border: 1px solid #A2552E;
-box-shadow: 6px 6px 15px -6px #7c7c7c;
+    border: 1px solid #A2552E;
+    box-shadow: 6px 6px 15px -6px #7c7c7c;
 }
 
 .white-btn:hover {
-background-color: #A2552E;
-color: #FFFFFF;
+    background-color: #A2552E;
+    color: #FFFFFF;
 }
 
 
@@ -109,6 +123,44 @@ color: #FFFFFF;
 .contact-info ul a {
     color: #000000;
     font-size: 15px;
+}
+
+.contact-list {
+    width: 90%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 90px;
+}
+
+.person {
+    display: flex;
+    gap: 30px;
+    align-items: center;
+}
+
+.contact-image {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+.contact-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.details li a {
+    color: white;
+    line-height: 24px;
+}
+
+.details a:hover {
+    color: #525252;
+    text-decoration: underline;
 }
 
 /*/////////////////////////////////////////////////////////*/
@@ -254,7 +306,6 @@ footer {
 }
 
 .footer li {
-    list-style: none;
     text-align: center;
 }
 
