--- a/styles/mobile_view_styles.css
+++ b/styles/mobile_view_styles.css
@@ -54,24 +54,20 @@
 /* HERO */
     .hero-section {
         width: 100%;
-        height: 630px;
-    }
-
-    .hero-image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        background-image: url(../img/hero.png);
+        background-size: cover;
     }
     
     .hero-content {
-        height: 630px;
-        width: 100%;
+        width: 96%;
         margin: auto;
-        padding: 0 3%;
+        padding: 3% 0 9% 0;
+        display: flex;
+        flex-direction: column;
+        gap: 60px;
     }
     
     .logo {
-        padding: 3% 0;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -82,8 +78,6 @@
     }
     
     .headline {
-        padding: 18% 0 12% 0;
-        width: 45%;
         display: flex;
         flex-direction: column;
         gap: 12px;
