--- a/styles/index.css
+++ b/styles/index.css
@@ -277,11 +277,11 @@ li {
     justify-content: flex-start;
 }
 
-.img-cont {
+.xs-device {
     width: 100%;
     margin: auto;
     padding:  0;
-    display: none;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 9px;
@@ -297,26 +297,6 @@ li {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.more {
-    text-align: center;
-    color: #7c7c7c;
-    width: 100%;
-}
-
-.less {
-    text-align: center;
-    color: #7c7c7c;
-    width: 100%;
-    display: none;
-}
-
-.more:hover, .less:hover {
-    text-align: center;
-    color: #ffffff;
-    width: 100%;
-    cursor: pointer;
 }
 
 /*/////////////////////////////////////////////////////////*/
