--- a/styles/mobile_view_styles.css
+++ b/styles/mobile_view_styles.css
@@ -10,7 +10,7 @@
     h2 {
         font-weight: 900;
         font-style: normal;
-        font-size: 27px;
+        font-size: 15px;
         color: #3C1C0B;
     }
     
@@ -31,7 +31,7 @@
     }
 
     p, a {
-        font-size: 15px;
+        font-size: 10.5px;
     }
     
     .brown-btn:hover {
@@ -54,7 +54,7 @@
 /* HERO */
     .hero-section {
         width: 100%;
-        background-image: url(../img/hero.png);
+        background-image: url(../img/hero-mobile.png);
         background-size: cover;
     }
     
@@ -142,6 +142,43 @@
     }
 
     .products {
+        width: 84%;
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 120px 0;
+        border-bottom: 1px solid #7c7c7c;
+    }
+
+    .product-image, .product-description {
+        width: 47%;
+        display: flex;
+        gap: 27px;
+        flex-direction: column;
+        align-items: self-start;
+    }
+
+    .product-description p {
+        font-size: 10.5px;
+    }
+
+    .product-description h2 {
+        font-size: 15px;
+    }
+
+    .product-image img {
+        border-radius: 2%;
+        object-fit: fill;
+        width: 100%;
+        height: 100%;
+    }
+
+    /*.products-section {
+        width: 100%;
+    }
+
+    .products {
         width: 96%;
         margin: auto;
         display: flex;
@@ -166,7 +203,7 @@
         object-fit: fill;
         width: 100%;
         height: 100%;
-    }
+    } */
 
     /*/////////////////////////////////////////////////////////*/
     /* MODAL */
@@ -220,7 +257,7 @@
 /* GALLERY */
 .gallery {
     background-color: #3C1C0B;
-    padding: 3% 0;
+    padding: 6% 0;
 }
 
 .gallery-header h1 {
@@ -238,18 +275,11 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: 9px;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
-.xs-img-contd {
-    width: 100%;
-    margin: auto;
-    padding:  0;
+.xs-device {
     display: none;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 9px;
-    justify-content: flex-start;
 }
 
 .g-img {
