--- a/styles/mobile_view_styles.css
+++ b/styles/mobile_view_styles.css
@@ -10,7 +10,7 @@
     h2 {
         font-weight: 900;
         font-style: normal;
-        font-size: 15px;
+        font-size: 27px;
         color: #3C1C0B;
     }
     
@@ -31,7 +31,7 @@
     }
 
     p, a {
-        font-size: 10.5px;
+        font-size: 15px;
     }
     
     .brown-btn:hover {
@@ -174,7 +174,8 @@
         height: 100%;
     }
 
-    /*.products-section {
+    /*////////////////////////////
+    .products-section {
         width: 100%;
     }
 
@@ -203,7 +204,9 @@
         object-fit: fill;
         width: 100%;
         height: 100%;
-    } */
+    } 
+
+    /////////////////////////////*/
 
     /*/////////////////////////////////////////////////////////*/
     /* MODAL */
@@ -229,6 +232,10 @@
         margin: 1% auto;
         border-bottom: #000000 solid 1px;
         padding: 2% 0 1.5% 0;
+    }
+
+    .modal-controls a {
+        font-size: 45px;
     }
 
     /* MODAL (PRODUCTS) */
