--- a/styles/mobile_view_styles.css
+++ b/styles/mobile_view_styles.css
@@ -137,6 +137,7 @@
 
 /*/////////////////////////////////////////////////////////*/
 /* PRODUCTS SECTION */
+/*///////////////////////////
     .products-section {
         width: 100%;
     }
@@ -174,7 +175,7 @@
         height: 100%;
     }
 
-    /*////////////////////////////
+    ///////////////////////////*/
     .products-section {
         width: 100%;
     }
@@ -206,8 +207,6 @@
         height: 100%;
     } 
 
-    /////////////////////////////*/
-
     /*/////////////////////////////////////////////////////////*/
     /* MODAL */
     .modal {
@@ -221,6 +220,7 @@
         background-color: #3C1C0B;
         box-shadow: 6px 6px 15px 0px #7c7c7c;
         overflow: hidden;
+        border-radius: 0;
     }
 
     .modal-header {
