--- a/styles/mobile_view_styles.css
+++ b/styles/mobile_view_styles.css
@@ -2,7 +2,7 @@
     h1 {
         font-weight: 900;
         font-style: normal;
-        font-size: 51px;
+        font-size: 45px;
         color: #3C1C0B;
         line-height: 54px;
     }
@@ -54,7 +54,7 @@
 /* HERO */
     .hero-section {
         width: 100%;
-        background-image: url(../img/hero-mobile.png);
+        background-image: url(../img/hero-mobile.jpg);
         background-size: cover;
     }
     
