--- a/styles/mobile_view_styles.css
+++ b/styles/mobile_view_styles.css
@@ -1,143 +1,147 @@
-@media (max-width:768px) {    
-    h1 {
-        font-weight: 900;
-        font-style: normal;
-        font-size: 45px;
-        color: #3C1C0B;
-        line-height: 54px;
-    }
-    
-    h2 {
-        font-weight: 900;
-        font-style: normal;
-        font-size: 27px;
-        color: #3C1C0B;
-    }
-    
-    h3 {
-        font-weight: 900;
-        font-style: normal;
-        font-size: 24px;
-        color: #fff4ee;
-    }
+@media (max-width: 768px) {
+  h1 {
+    font-weight: 900;
+    font-style: normal;
+    font-size: 45px;
+    color: #3c1c0b;
+    line-height: 54px;
+  }
 
-    h4 {
-        font-family: "Merriweather", serif;
-        font-weight: 600;
-        font-style: normal;
-        font-size: 15px;
-        color: #525252;
-        padding-bottom: 6px;
-    }
+  h2 {
+    font-weight: 900;
+    font-style: normal;
+    font-size: 27px;
+    color: #3c1c0b;
+  }
 
-    p, a {
-        font-size: 15px;
-    }
-    
-    .brown-btn:hover {
-        background-color: #FFFFFF;
-        color: #3C1C0B;
-        border: 1px solid #A2552E;
-        box-shadow: 6px 6px 15px -6px #7c7c7c;
-    }
-    
-    .white-btn:hover {
-        background-color: #A2552E;
-        color: #FFFFFF;
-    }
+  h3 {
+    font-weight: 900;
+    font-style: normal;
+    font-size: 24px;
+    color: #fff4ee;
+  }
 
-    .xs {
-        display: none;
-    }
-    
-/*/////////////////////////////////////////////////////////*/
-/* HERO */
-    .hero-section {
-        width: 100%;
-        background-image: url(../img/hero-mobile.jpg);
-        background-size: cover;
-    }
-    
-    .hero-content {
-        width: 96%;
-        margin: auto;
-        padding: 1% 0 9% 0;
-        display: flex;
-        flex-direction: column;
-        gap: 75px;
-    }
-    
-    .logo {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    
-    .logo img {
-        width: 27%;
-    }
-    
-    .headline {
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-        align-items:flex-start;
-    }
-    
-    .contact-info ul {
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-        color: #3C1C0B;
-    }
-    
-    .contact-info ul a {
-        color: #000000;
-        font-size: 15px;
-    }
+  h4 {
+    font-family: "Merriweather", serif;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 15px;
+    color: #525252;
+    padding-bottom: 6px;
+  }
 
-    .contact-list {
-        width: 96%;
-        margin: auto;
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-    }
-    
-    .person {
-        display: flex;
-        gap: 21px;
-        align-items: center;
-    }
-    
-    .contact-image {
-        width: 90px;
-        height: 90px;
-        border-radius: 50%;
-    }
-    
-    .contact-image img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        
-    }
-    
-    .details a {
-        color: white;
-        font-size: 15px;
-        font-weight: 300;
-        line-height: 12px;
-    }
-    
-    .details a:hover {
-        color: #525252;
-        text-decoration: underline;
-    }
+  .lg-screen {
+    display: inline-block;
+  }
 
-/*/////////////////////////////////////////////////////////*/
-/* PRODUCTS SECTION */
-/*///////////////////////////
+  p,
+  a {
+    font-size: 15px;
+  }
+
+  .brown-btn:hover {
+    background-color: #ffffff;
+    color: #3c1c0b;
+    border: 1px solid #a2552e;
+    box-shadow: 6px 6px 15px -6px #7c7c7c;
+  }
+
+  .white-btn:hover {
+    background-color: #a2552e;
+    color: #ffffff;
+  }
+
+  .xs {
+    display: none;
+  }
+
+  /*/////////////////////////////////////////////////////////*/
+  /* HERO */
+  .hero-section {
+    width: 100%;
+    background-image: url(../img/hero-mobile.jpg);
+    background-size: cover;
+  }
+
+  .hero-content {
+    width: 96%;
+    margin: auto;
+    padding: 1% 0 9% 0;
+    display: flex;
+    flex-direction: column;
+    gap: 75px;
+  }
+
+  .logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .logo img {
+    width: 27%;
+  }
+
+  .headline {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    align-items: flex-start;
+  }
+
+  .contact-info ul {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    color: #3c1c0b;
+  }
+
+  .contact-info ul a {
+    color: #000000;
+    font-size: 15px;
+  }
+
+  .contact-list {
+    width: 96%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+  }
+
+  .person {
+    display: flex;
+    gap: 21px;
+    align-items: center;
+  }
+
+  .contact-image {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+  }
+
+  .contact-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .details a {
+    color: white;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 12px;
+  }
+
+  .details a:hover {
+    color: #525252;
+    text-decoration: underline;
+  }
+
+  /*/////////////////////////////////////////////////////////*/
+  /* PRODUCTS SECTION */
+  /*///////////////////////////
     .products-section {
         width: 100%;
     }
@@ -176,105 +180,103 @@
     }
 
     ///////////////////////////*/
-    .products-section {
-        width: 100%;
-    }
+  .products-section {
+    width: 100%;
+  }
 
-    .products {
-        width: 96%;
-        margin: auto;
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: space-between;
-        align-items: center;
-        gap: 54px;
-        padding: 120px 0;
-        border-bottom: 1px solid #7c7c7c;
-    }
+  .products {
+    width: 96%;
+    margin: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    align-items: center;
+    gap: 54px;
+    padding: 120px 0;
+    border-bottom: 1px solid #7c7c7c;
+  }
 
-    .product-image, .product-description {
-        width: 100%;
-        display: flex;
-        gap: 15px;
-        flex-direction: column;
-        align-items: self-start;
-    }
+  .product-image,
+  .product-description {
+    width: 100%;
+    display: flex;
+    gap: 15px;
+    flex-direction: column;
+    align-items: self-start;
+  }
 
-    .product-image img {
-        border-radius: 2%;
-        object-fit: fill;
-        width: 100%;
-        height: 100%;
-    } 
+  .product-image img {
+    border-radius: 2%;
+    object-fit: fill;
+    width: 100%;
+    height: 100%;
+  }
 
-    /*/////////////////////////////////////////////////////////*/
-    /* MODAL */
-    .modal {
-        display: none;
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 1;
-        width: 100%;
-        height: 100vh;
-        background-color: #3C1C0B;
-        box-shadow: 6px 6px 15px 0px #7c7c7c;
-        overflow: hidden;
-        border-radius: 0;
-    }
+  /*/////////////////////////////////////////////////////////*/
+  /* MODAL */
+  .modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100vh;
+    background-color: #3c1c0b;
+    box-shadow: 6px 6px 15px 0px #7c7c7c;
+    overflow: hidden;
+    border-radius: 0;
+  }
 
-    .modal-header {
-        opacity: 1;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 93%;
-        margin: 1% auto;
-        border-bottom: #000000 solid 1px;
-        padding: 2% 0 1.5% 0;
-    }
+  .modal-header {
+    opacity: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 93%;
+    margin: 1% auto;
+    border-bottom: #000000 solid 1px;
+    padding: 2% 0 1.5% 0;
+  }
 
-    .modal-controls a {
-        font-size: 45px;
-    }
+  .modal-controls a {
+    font-size: 45px;
+  }
 
-    /* MODAL (PRODUCTS) */
-    .modal-images {
-        width: 94%;
-        margin: auto;
-        height: 84vh;
-        
-    }
+  /* MODAL (PRODUCTS) */
+  .modal-images {
+    width: 94%;
+    margin: auto;
+    height: 84vh;
+  }
 
-    .fade {
-        width: 100%;
-        height: 100%;
-        display: none;
-        
-    }
+  .fade {
+    width: 100%;
+    height: 100%;
+    display: none;
+  }
 
-    .fade img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        border-radius: 6px;
-    }
+  .fade img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 6px;
+  }
 
-/*/////////////////////////////////////////////////////////*/
-/* GALLERY */
-.gallery {
-    background-color: #3C1C0B;
+  /*/////////////////////////////////////////////////////////*/
+  /* GALLERY */
+  .gallery {
+    background-color: #3c1c0b;
     padding: 6% 0;
-}
+  }
 
-.gallery-header h1 {
+  .gallery-header h1 {
     color: #ffffff;
     text-align: center;
     word-spacing: 18px;
+  }
 
-}
-
-.gallery-images {
+  .gallery-images {
     width: 96%;
     margin: auto;
     padding: 1.5% 0 0 0;
@@ -283,134 +285,135 @@
     flex-wrap: wrap;
     gap: 9px;
     justify-content: center;
-}
+  }
 
-.xs-device {
+  .xs-device {
     display: none;
-}
+  }
 
-.g-img {
+  .g-img {
     width: 47%;
     height: 270px;
-}
+  }
 
-.g-img img {
+  .g-img img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  /*/////////////////////////////////////////////////////////*/
+  /* GET IN TOUCH */
+  .get-in-touch {
+    background-color: #e9e2dd;
+    width: 100%;
+    margin: auto;
+    border-radius: 0;
+    padding: 24% 6%;
+    display: block;
+  }
+
+  .get-in-touch-info {
+    width: 100%;
+    margin: auto;
+    display: block;
+    padding: 0 0 30px 0;
+  }
+
+  form {
+    width: 96%;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    align-items: self-start;
+  }
+
+  form div {
+    width: 100%;
+  }
+
+  input,
+  textarea {
+    width: 100%;
+    height: 39px;
+    border-radius: 6px;
+    font-size: 15px;
+    padding: 6px 9px;
+    background-color: #f5f5f4;
+    border: #a2552e 1px solid;
+    outline: none;
+  }
+
+  textarea {
+    height: 210px;
+  }
+
+  /*/////////////////////////////////////////////////////////*/
+  /* FOOTER */
+  footer {
+    background-color: #dbcaaa;
+    padding: 12% 0 0 0;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    align-items: center;
+    justify-content: center;
+    padding: 2% 0;
+  }
+
+  .footer li {
+    list-style: none;
+    text-align: center;
+  }
+
+  .footer a {
+    color: #3c1c0b;
+    font-size: 12px;
+  }
+
+  .footer a:hover {
+    color: #000000;
+    text-decoration: underline;
+  }
+
+  .footer img {
+    width: 12%;
+  }
+
+  .copyright {
+    font-size: 12px;
+    font-weight: 600;
+    padding: 6px 0 9px 0;
+  }
+
+  /* NOTICE - TERMS AND SHIPPING */
+  #notice {
+    width: 90%;
+    margin: 1.5% auto;
+    display: none;
+    transition: height 3s ease;
+    padding: 3% 0;
+    border-top: #3c1c0b solid 1px;
+    border-bottom: #3c1c0b solid 1px;
+  }
+
+  #notice p,
+  #notice li {
+    font-size: 12px;
+  }
+
+  .notice-title {
+    font-size: 15px;
+    font-weight: 900;
+    padding: 12px 0;
+    margin-bottom: 24px;
+    border-bottom: 1px #3c1c0b5b solid;
+  }
+
+  ol {
+    padding: 6px 0 6px 18px;
+  }
 }
-
-/*/////////////////////////////////////////////////////////*/
-/* GET IN TOUCH */
-    .get-in-touch {
-        background-color: #E9E2DD;
-        width: 100%;
-        margin: auto;
-        border-radius: 0;
-        padding: 24% 6%;
-        display: block;
-    }
-
-    .get-in-touch-info {
-        width: 100%;
-        margin: auto;
-        display: block;
-        padding: 0 0 30px 0;
-    }
-
-    form {
-        width: 96%;
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-        align-items: self-start;
-    }
-
-    form div {
-        width: 100%;
-    }
-
-    input, textarea {
-        width: 100%;
-        height: 39px;
-        border-radius: 6px;
-        font-size: 15px;
-        padding: 6px 9px;
-        background-color: #F5F5F4;
-        border: #A2552E 1px solid;
-        outline: none;
-    }
-
-    textarea {
-        height: 210px;
-    }
-
-/*/////////////////////////////////////////////////////////*/
-/* FOOTER */
-    footer {
-        background-color: #DBCAAA;
-        padding: 12% 0 0 0;
-    }
-
-    .footer {
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-        align-items: center;
-        justify-content: center;
-        padding: 2% 0;
-    }
-
-    .footer li {
-        list-style: none;
-        text-align: center;
-    }
-
-    .footer a {
-        color: #3C1C0B;
-        font-size: 12px;
-    }
-
-    .footer a:hover {
-        color: #000000;
-        text-decoration: underline;
-    }
-
-    .footer img {
-        width: 12%;
-    }
-
-    .copyright {
-        font-size: 12px;
-        font-weight: 600;
-        padding: 6px 0 9px 0;
-    }
-
-    /* NOTICE - TERMS AND SHIPPING */
-    #notice {
-        width: 90%;
-        margin: 1.5% auto;
-        display: none;
-        transition: height 3s ease;
-        padding: 3% 0;
-        border-top: #3C1C0B solid 1px;
-        border-bottom: #3C1C0B solid 1px;
-    }
-
-    #notice p, #notice li {
-        font-size: 12px;
-    }
-
-    .notice-title {
-        font-size: 15px;
-        font-weight: 900;
-        padding: 12px 0;
-        margin-bottom: 24px;
-        border-bottom: 1px #3c1c0b5b solid;
-    }
-
-    ol {
-        padding: 6px 0 6px 18px;
-    }
-}
-
